first run using full data

--- a/CNN scalar custom loading.ipynb
+++ b/CNN scalar custom loading.ipynb
@@ -5,8 +5,7 @@
    "id": "749177ff-3ed3-4933-af1a-e96497bd2301",
    "metadata": {},
    "source": [
-    "TODO: move inputs and labels to gpu in train_epoch and test<br>\n",
-    "test batch size other than 1"
+    "TODO: test batch size other than 1"
    ]
   },
   {
@@ -34,7 +33,8 @@
     "import pandas as pd\n",
     "import os\n",
     "from sklearn.metrics import r2_score\n",
-    "import itertools"
+    "import itertools\n",
+    "import math"
    ]
   },
   {
@@ -51,7 +51,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cpu\n"
+      "cuda:0\n"
      ]
     }
    ],
@@ -372,20 +372,25 @@
    "outputs": [],
    "source": [
     "class CustomDataset(Dataset):\n",
-    "    def __init__(self, input_folder_path, label_file_path, transform = None):\n",
+    "    def __init__(self, input_folder_path, label_file_path, transform = None, max_count = None):\n",
     "        self.input_folder_path = input_folder_path\n",
     "        self.label_file_path = label_file_path\n",
     "        self.transform = transform\n",
+    "        self.max_count = max_count if max_count else math.inf\n",
     "        self.input_paths, self.input_names = self.load_input_paths_names()\n",
     "        self.labels = self.load_labels()\n",
     "    \n",
     "    def load_input_paths_names(self):\n",
+    "        count = 0\n",
     "        list_of_file_paths = []\n",
     "        list_of_file_names = []\n",
     "        directory = os.fsencode(self.input_folder_path)\n",
     "        for file in os.listdir(directory):\n",
     "            list_of_file_paths.append(self.input_folder_path + os.fsdecode(file))\n",
     "            list_of_file_names.append(os.fsdecode(file))\n",
+    "            count += 1\n",
+    "            if count >= self.max_count:\n",
+    "                break\n",
     "        return list_of_file_paths, list_of_file_names\n",
     "    \n",
     "    def load_labels(self):\n",
@@ -403,6 +408,8 @@
     "        \n",
     "        if self.transform:\n",
     "            sample = self.transform(sample)\n",
+    "        if idx % 5000 == 0:\n",
+    "            print('Reading sample number', idx)\n",
     "        return sample, self.labels[self.input_names[idx].replace('binvox', 'stl')]\n",
     "    \n",
     "    def load_sample_from_disk(self, file_path):\n",
@@ -444,13 +451,15 @@
    },
    "outputs": [],
    "source": [
-    "dataset = CustomDataset(input_folder_path = input_folder_path, label_file_path = label_file_path, transform = transform)"
+    "dataset = CustomDataset(input_folder_path = input_folder_path, label_file_path = label_file_path, transform = transform, max_count = None)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "f0f42434-93ee-4923-9809-4aed63ddcce2",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Define Network"
    ]
@@ -710,6 +719,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "99138ba4-a9d8-4108-96da-6b503e54c7f1",
+   "metadata": {},
+   "source": [
+    "# Define Training Logic"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "676a283b-9009-4ac8-8fd3-c1ef8b65c4b2",
@@ -722,6 +739,8 @@
     "    cumulative_loss = 0.0\n",
     "    for i, data in enumerate(training_loader):\n",
     "        inputs, labels = data\n",
+    "        inputs = inputs.to(device)\n",
+    "        labels = labels.to(device)\n",
     "        labels = torch.squeeze(labels)\n",
     "\n",
     "        # Zero the gradients\n",
@@ -808,14 +827,14 @@
     "    y_pred = []\n",
     "    for i, data in enumerate(testing_loader):\n",
     "        inputs, labels = data\n",
+    "        inputs = inputs.to(device)\n",
+    "        labels = labels.to(device)\n",
     "        outputs = model(inputs)\n",
     "        loss = loss_fn(outputs, labels)\n",
     "        testing_loss += loss.item()\n",
     "\n",
     "        y_true.extend(labels.cpu().numpy().tolist())\n",
     "        y_pred.extend(outputs.cpu().detach().numpy().tolist())\n",
-    "    y_true = list(itertools.chain.from_iterable(y_true))\n",
-    "    y_pred = list(itertools.chain.from_iterable(y_pred))\n",
     "    return testing_loss / len(testing_loader), testing_loss, r2_score(y_true = y_true, y_pred = y_pred)"
    ]
   },
@@ -877,7 +896,7 @@
     "        'values': [8, 4]\n",
     "    },\n",
     "}\n",
-    "'''\n",
+    "\n",
     "parameters_dict = {\n",
     "    'kernel_size': {\n",
     "        'values': [3]\n",
@@ -886,16 +905,16 @@
     "        'values': ['ReLU']\n",
     "    },\n",
     "    'epochs_choice': {\n",
-    "          'values': [5]\n",
+    "          'values': [1]\n",
     "    },\n",
     "    'learning_rate': {\n",
-    "        'values': [1e-4]\n",
+    "        'values': [1e-3]\n",
     "    },\n",
     "    'batch_size': {\n",
-    "        'values': [1]\n",
+    "        'values': [4]\n",
     "    },\n",
     "}\n",
-    "'''\n",
+    "\n",
     "sweep_config['parameters'] = parameters_dict"
    ]
   },
@@ -919,8 +938,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Create sweep with ID: f0cj5xom\n",
-      "Sweep URL: https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/f0cj5xom\n"
+      "Create sweep with ID: 0so70g78\n",
+      "Sweep URL: https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/0so70g78\n"
      ]
     }
    ],
@@ -951,7 +970,7 @@
     {
      "data": {
       "text/html": [
-       "Run data is saved locally in <code>/Users/lichang/CNN/wandb/run-20240123_174401-tnpr2y3k</code>"
+       "Run data is saved locally in <code>C:\\Users\\silly bb\\Desktop\\Capstone\\CNN\\wandb\\run-20240124_011154-z7a41hli</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -963,7 +982,7 @@
     {
      "data": {
       "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/changli_824/CNN_sweep_scalar/runs/tnpr2y3k' target=\"_blank\">genial-sweep-1</a></strong> to <a href='https://wandb.ai/changli_824/CNN_sweep_scalar' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>Sweep page: <a href='https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/f0cj5xom' target=\"_blank\">https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/f0cj5xom</a>"
+       "Syncing run <strong><a href='https://wandb.ai/changli_824/CNN_sweep_scalar/runs/z7a41hli' target=\"_blank\">usual-sweep-1</a></strong> to <a href='https://wandb.ai/changli_824/CNN_sweep_scalar' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>Sweep page: <a href='https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/0so70g78' target=\"_blank\">https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/0so70g78</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -987,7 +1006,7 @@
     {
      "data": {
       "text/html": [
-       " View sweep at <a href='https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/f0cj5xom' target=\"_blank\">https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/f0cj5xom</a>"
+       " View sweep at <a href='https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/0so70g78' target=\"_blank\">https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/0so70g78</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -999,7 +1018,7 @@
     {
      "data": {
       "text/html": [
-       " View run at <a href='https://wandb.ai/changli_824/CNN_sweep_scalar/runs/tnpr2y3k' target=\"_blank\">https://wandb.ai/changli_824/CNN_sweep_scalar/runs/tnpr2y3k</a>"
+       " View run at <a href='https://wandb.ai/changli_824/CNN_sweep_scalar/runs/z7a41hli' target=\"_blank\">https://wandb.ai/changli_824/CNN_sweep_scalar/runs/z7a41hli</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -1012,14 +1031,81 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "config: {'activation_fn': 'ReLU', 'batch_size': 8, 'epochs_choice': 5, 'kernel_size': 3, 'learning_rate': 0.0001}\n"
+      "config: {'activation_fn': 'ReLU', 'batch_size': 4, 'epochs_choice': 1, 'kernel_size': 3, 'learning_rate': 0.001}\n",
+      "Reading sample number 0\n",
+      "Reading sample number 5000\n",
+      "Reading sample number 10000\n",
+      "Reading sample number 15000\n",
+      "Reading sample number 20000\n",
+      "Loss for epoch 0: 3809198.7819808377\n",
+      "Reading sample number 0\n",
+      "Reading sample number 5000\n",
+      "Reading sample number 10000\n",
+      "Reading sample number 15000\n",
+      "Reading sample number 20000\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Label(value='0.001 MB of 0.001 MB uploaded\\r'), FloatProgress(value=1.0, max=1.0)))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "    table.wandb td:nth-child(1) { padding: 0 10px; text-align: left ; width: auto;} td:nth-child(2) {text-align: left ; width: 100%}\n",
+       "    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; width: 100% }\n",
+       "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
+       "    </style>\n",
+       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>avg_loss_per_batch</td><td>▁</td></tr><tr><td>avg_loss_per_batch_test</td><td>▁</td></tr><tr><td>batch loss</td><td>▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▂▁▁▁▁▁█▁▁</td></tr><tr><td>cumulative_loss</td><td>▁</td></tr><tr><td>r2</td><td>▁</td></tr><tr><td>testing_loss</td><td>▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>avg_loss_per_batch</td><td>670.51554</td></tr><tr><td>avg_loss_per_batch_test</td><td>668.51678</td></tr><tr><td>batch loss</td><td>37.32817</td></tr><tr><td>cumulative_loss</td><td>3809198.78198</td></tr><tr><td>r2</td><td>-0.01041</td></tr><tr><td>testing_loss</td><td>3797843.83035</td></tr></table><br/></div></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run <strong style=\"color:#cdcd00\">usual-sweep-1</strong> at: <a href='https://wandb.ai/changli_824/CNN_sweep_scalar/runs/z7a41hli' target=\"_blank\">https://wandb.ai/changli_824/CNN_sweep_scalar/runs/z7a41hli</a><br/>Synced 6 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Find logs at: <code>.\\wandb\\run-20240124_011154-z7a41hli\\logs</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Ctrl + C detected. Stopping sweep.\n"
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Sweep Agent: Waiting for job.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Sweep Agent: Exiting.\n"
      ]
     }
    ],
@@ -1055,7 +1141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
