switch to batch RAM loading

--- a/CNN scalar custom loading.ipynb
+++ b/CNN scalar custom loading.ipynb
@@ -372,11 +372,12 @@
    "outputs": [],
    "source": [
     "class CustomDataset(Dataset):\n",
-    "    def __init__(self, input_folder_path, label_file_path, transform = None, max_count = None):\n",
+    "    def __init__(self, input_folder_path, label_file_path, transform = None, max_count = None, ram_limit = 1000):\n",
     "        self.input_folder_path = input_folder_path\n",
     "        self.label_file_path = label_file_path\n",
     "        self.transform = transform\n",
     "        self.max_count = max_count if max_count else math.inf\n",
+    "        self.ram_limit = ram_limit\n",
     "        self.input_paths, self.input_names = self.load_input_paths_names()\n",
     "        self.labels = self.load_labels()\n",
     "    \n",
@@ -401,19 +402,35 @@
     "        return len(self.input_paths)\n",
     "    \n",
     "    def __getitem__(self, idx):\n",
-    "        sample = self.load_sample_from_disk(self.input_paths[idx])\n",
+    "        if idx % self.ram_limit == 0:\n",
+    "            # clear existing samples in ram\n",
+    "            self.samples_in_ram = None\n",
+    "            # need to load new samples into ram\n",
+    "            self.samples_in_ram = self.load_sample_into_ram(idx)\n",
+    "        sample = self.load_sample_from_ram(self.input_names[idx])\n",
     "        \n",
     "        # debug\n",
     "        # print(self.input_names[idx].replace('binvox', 'stl'))\n",
     "        \n",
     "        if self.transform:\n",
     "            sample = self.transform(sample)\n",
-    "        if idx % 5000 == 0:\n",
-    "            print('Reading sample number', idx)\n",
+    "        if idx % self.ram_limit == 0:\n",
+    "            print('Processing sample number', idx)\n",
     "        return sample, self.labels[self.input_names[idx].replace('binvox', 'stl')]\n",
     "    \n",
     "    def load_sample_from_disk(self, file_path):\n",
-    "        return read_as_3d_array(open(file_path, 'rb')).data"
+    "        return read_as_3d_array(open(file_path, 'rb')).data\n",
+    "\n",
+    "    def load_sample_into_ram(self, idx):\n",
+    "        samples_in_ram = {}\n",
+    "        # need to load ram_limit # of samples, starting from idx\n",
+    "        print('Loading samples', idx, 'through', min(idx + self.ram_limit, self.__len__()) - 1)\n",
+    "        for file_name in self.input_names[idx : min(idx + self.ram_limit, self.__len__())]:\n",
+    "            samples_in_ram[file_name] = self.load_sample_from_disk(self.input_folder_path + file_name)\n",
+    "        return samples_in_ram\n",
+    "\n",
+    "    def load_sample_from_ram(self, file_name):\n",
+    "        return self.samples_in_ram[file_name]"
    ]
   },
   {
@@ -451,7 +468,8 @@
    },
    "outputs": [],
    "source": [
-    "dataset = CustomDataset(input_folder_path = input_folder_path, label_file_path = label_file_path, transform = transform, max_count = None)"
+    "dataset = CustomDataset(input_folder_path = input_folder_path, label_file_path = label_file_path, transform = transform, max_count = None, ram_limit = 1000)\n",
+    "dataset_limited = CustomDataset(input_folder_path = input_folder_path, label_file_path = label_file_path, transform = transform, max_count = 5000, ram_limit = 1000)"
    ]
   },
   {
@@ -820,7 +838,7 @@
     "    config = wandb.config\n",
     "    \n",
     "    # get testing loader\n",
-    "    testing_loader = DataLoader(dataset, batch_size = config.batch_size, shuffle = False)\n",
+    "    testing_loader = DataLoader(dataset_limited, batch_size = config.batch_size, shuffle = False)\n",
     "    \n",
     "    testing_loss = 0.0\n",
     "    y_true = []\n",
@@ -905,7 +923,7 @@
     "        'values': ['ReLU']\n",
     "    },\n",
     "    'epochs_choice': {\n",
-    "          'values': [1]\n",
+    "          'values': [5]\n",
     "    },\n",
     "    'learning_rate': {\n",
     "        'values': [1e-3]\n",
@@ -938,8 +956,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Create sweep with ID: 0so70g78\n",
-      "Sweep URL: https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/0so70g78\n"
+      "Create sweep with ID: mn3r3h0e\n",
+      "Sweep URL: https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/mn3r3h0e\n"
      ]
     }
    ],
@@ -949,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "fec8f8da-e378-4181-8bcc-fc83a0a26754",
    "metadata": {
     "tags": []
@@ -970,7 +988,7 @@
     {
      "data": {
       "text/html": [
-       "Run data is saved locally in <code>C:\\Users\\silly bb\\Desktop\\Capstone\\CNN\\wandb\\run-20240124_011154-z7a41hli</code>"
+       "Run data is saved locally in <code>C:\\Users\\silly bb\\Desktop\\Capstone\\CNN\\wandb\\run-20240124_041529-zp04aijl</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -982,7 +1000,7 @@
     {
      "data": {
       "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/changli_824/CNN_sweep_scalar/runs/z7a41hli' target=\"_blank\">usual-sweep-1</a></strong> to <a href='https://wandb.ai/changli_824/CNN_sweep_scalar' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>Sweep page: <a href='https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/0so70g78' target=\"_blank\">https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/0so70g78</a>"
+       "Syncing run <strong><a href='https://wandb.ai/changli_824/CNN_sweep_scalar/runs/zp04aijl' target=\"_blank\">exalted-sweep-1</a></strong> to <a href='https://wandb.ai/changli_824/CNN_sweep_scalar' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>Sweep page: <a href='https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/mn3r3h0e' target=\"_blank\">https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/mn3r3h0e</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -1006,7 +1024,7 @@
     {
      "data": {
       "text/html": [
-       " View sweep at <a href='https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/0so70g78' target=\"_blank\">https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/0so70g78</a>"
+       " View sweep at <a href='https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/mn3r3h0e' target=\"_blank\">https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/mn3r3h0e</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -1018,7 +1036,7 @@
     {
      "data": {
       "text/html": [
-       " View run at <a href='https://wandb.ai/changli_824/CNN_sweep_scalar/runs/z7a41hli' target=\"_blank\">https://wandb.ai/changli_824/CNN_sweep_scalar/runs/z7a41hli</a>"
+       " View run at <a href='https://wandb.ai/changli_824/CNN_sweep_scalar/runs/zp04aijl' target=\"_blank\">https://wandb.ai/changli_824/CNN_sweep_scalar/runs/zp04aijl</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -1031,81 +1049,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "config: {'activation_fn': 'ReLU', 'batch_size': 4, 'epochs_choice': 1, 'kernel_size': 3, 'learning_rate': 0.001}\n",
-      "Reading sample number 0\n",
-      "Reading sample number 5000\n",
-      "Reading sample number 10000\n",
-      "Reading sample number 15000\n",
-      "Reading sample number 20000\n",
-      "Loss for epoch 0: 3809198.7819808377\n",
-      "Reading sample number 0\n",
-      "Reading sample number 5000\n",
-      "Reading sample number 10000\n",
-      "Reading sample number 15000\n",
-      "Reading sample number 20000\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Label(value='0.001 MB of 0.001 MB uploaded\\r'), FloatProgress(value=1.0, max=1.0)))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       "    table.wandb td:nth-child(1) { padding: 0 10px; text-align: left ; width: auto;} td:nth-child(2) {text-align: left ; width: 100%}\n",
-       "    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; width: 100% }\n",
-       "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
-       "    </style>\n",
-       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>avg_loss_per_batch</td><td>▁</td></tr><tr><td>avg_loss_per_batch_test</td><td>▁</td></tr><tr><td>batch loss</td><td>▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▂▁▁▁▁▁█▁▁</td></tr><tr><td>cumulative_loss</td><td>▁</td></tr><tr><td>r2</td><td>▁</td></tr><tr><td>testing_loss</td><td>▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>avg_loss_per_batch</td><td>670.51554</td></tr><tr><td>avg_loss_per_batch_test</td><td>668.51678</td></tr><tr><td>batch loss</td><td>37.32817</td></tr><tr><td>cumulative_loss</td><td>3809198.78198</td></tr><tr><td>r2</td><td>-0.01041</td></tr><tr><td>testing_loss</td><td>3797843.83035</td></tr></table><br/></div></div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View run <strong style=\"color:#cdcd00\">usual-sweep-1</strong> at: <a href='https://wandb.ai/changli_824/CNN_sweep_scalar/runs/z7a41hli' target=\"_blank\">https://wandb.ai/changli_824/CNN_sweep_scalar/runs/z7a41hli</a><br/>Synced 6 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Find logs at: <code>.\\wandb\\run-20240124_011154-z7a41hli\\logs</code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Sweep Agent: Waiting for job.\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Sweep Agent: Exiting.\n"
+      "config: {'activation_fn': 'ReLU', 'batch_size': 4, 'epochs_choice': 5, 'kernel_size': 3, 'learning_rate': 0.001}\n",
+      "Loading samples 0 through 999\n",
+      "Processing sample number 0\n",
+      "Loading samples 1000 through 1999\n",
+      "Processing sample number 1000\n",
+      "Loading samples 2000 through 2999\n",
+      "Processing sample number 2000\n"
      ]
     }
    ],
