--- a/CNN scalar custom loading.ipynb
+++ b/CNN scalar custom loading.ipynb
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "fec8f8da-e378-4181-8bcc-fc83a0a26754",
    "metadata": {
     "tags": []
@@ -1055,7 +1055,309 @@
       "Loading samples 1000 through 1999\n",
       "Processing sample number 1000\n",
       "Loading samples 2000 through 2999\n",
-      "Processing sample number 2000\n"
+      "Processing sample number 2000\n",
+      "Loading samples 3000 through 3999\n",
+      "Processing sample number 3000\n",
+      "Loading samples 4000 through 4999\n",
+      "Processing sample number 4000\n",
+      "Loading samples 5000 through 5999\n",
+      "Processing sample number 5000\n",
+      "Loading samples 6000 through 6999\n",
+      "Processing sample number 6000\n",
+      "Loading samples 7000 through 7999\n",
+      "Processing sample number 7000\n",
+      "Loading samples 8000 through 8999\n",
+      "Processing sample number 8000\n",
+      "Loading samples 9000 through 9999\n",
+      "Processing sample number 9000\n",
+      "Loading samples 10000 through 10999\n",
+      "Processing sample number 10000\n",
+      "Loading samples 11000 through 11999\n",
+      "Processing sample number 11000\n",
+      "Loading samples 12000 through 12999\n",
+      "Processing sample number 12000\n",
+      "Loading samples 13000 through 13999\n",
+      "Processing sample number 13000\n",
+      "Loading samples 14000 through 14999\n",
+      "Processing sample number 14000\n",
+      "Loading samples 15000 through 15999\n",
+      "Processing sample number 15000\n",
+      "Loading samples 16000 through 16999\n",
+      "Processing sample number 16000\n",
+      "Loading samples 17000 through 17999\n",
+      "Processing sample number 17000\n",
+      "Loading samples 18000 through 18999\n",
+      "Processing sample number 18000\n",
+      "Loading samples 19000 through 19999\n",
+      "Processing sample number 19000\n",
+      "Loading samples 20000 through 20999\n",
+      "Processing sample number 20000\n",
+      "Loading samples 21000 through 21999\n",
+      "Processing sample number 21000\n",
+      "Loading samples 22000 through 22721\n",
+      "Processing sample number 22000\n",
+      "Loss for epoch 0: 3810708.0438355883\n",
+      "Loading samples 0 through 999\n",
+      "Processing sample number 0\n",
+      "Loading samples 1000 through 1999\n",
+      "Processing sample number 1000\n",
+      "Loading samples 2000 through 2999\n",
+      "Processing sample number 2000\n",
+      "Loading samples 3000 through 3999\n",
+      "Processing sample number 3000\n",
+      "Loading samples 4000 through 4999\n",
+      "Processing sample number 4000\n",
+      "Loading samples 5000 through 5999\n",
+      "Processing sample number 5000\n",
+      "Loading samples 6000 through 6999\n",
+      "Processing sample number 6000\n",
+      "Loading samples 7000 through 7999\n",
+      "Processing sample number 7000\n",
+      "Loading samples 8000 through 8999\n",
+      "Processing sample number 8000\n",
+      "Loading samples 9000 through 9999\n",
+      "Processing sample number 9000\n",
+      "Loading samples 10000 through 10999\n",
+      "Processing sample number 10000\n",
+      "Loading samples 11000 through 11999\n",
+      "Processing sample number 11000\n",
+      "Loading samples 12000 through 12999\n",
+      "Processing sample number 12000\n",
+      "Loading samples 13000 through 13999\n",
+      "Processing sample number 13000\n",
+      "Loading samples 14000 through 14999\n",
+      "Processing sample number 14000\n",
+      "Loading samples 15000 through 15999\n",
+      "Processing sample number 15000\n",
+      "Loading samples 16000 through 16999\n",
+      "Processing sample number 16000\n",
+      "Loading samples 17000 through 17999\n",
+      "Processing sample number 17000\n",
+      "Loading samples 18000 through 18999\n",
+      "Processing sample number 18000\n",
+      "Loading samples 19000 through 19999\n",
+      "Processing sample number 19000\n",
+      "Loading samples 20000 through 20999\n",
+      "Processing sample number 20000\n",
+      "Loading samples 21000 through 21999\n",
+      "Processing sample number 21000\n",
+      "Loading samples 22000 through 22721\n",
+      "Processing sample number 22000\n",
+      "Loss for epoch 1: 3806386.5928955413\n",
+      "Loading samples 0 through 999\n",
+      "Processing sample number 0\n",
+      "Loading samples 1000 through 1999\n",
+      "Processing sample number 1000\n",
+      "Loading samples 2000 through 2999\n",
+      "Processing sample number 2000\n",
+      "Loading samples 3000 through 3999\n",
+      "Processing sample number 3000\n",
+      "Loading samples 4000 through 4999\n",
+      "Processing sample number 4000\n",
+      "Loading samples 5000 through 5999\n",
+      "Processing sample number 5000\n",
+      "Loading samples 6000 through 6999\n",
+      "Processing sample number 6000\n",
+      "Loading samples 7000 through 7999\n",
+      "Processing sample number 7000\n",
+      "Loading samples 8000 through 8999\n",
+      "Processing sample number 8000\n",
+      "Loading samples 9000 through 9999\n",
+      "Processing sample number 9000\n",
+      "Loading samples 10000 through 10999\n",
+      "Processing sample number 10000\n",
+      "Loading samples 11000 through 11999\n",
+      "Processing sample number 11000\n",
+      "Loading samples 12000 through 12999\n",
+      "Processing sample number 12000\n",
+      "Loading samples 13000 through 13999\n",
+      "Processing sample number 13000\n",
+      "Loading samples 14000 through 14999\n",
+      "Processing sample number 14000\n",
+      "Loading samples 15000 through 15999\n",
+      "Processing sample number 15000\n",
+      "Loading samples 16000 through 16999\n",
+      "Processing sample number 16000\n",
+      "Loading samples 17000 through 17999\n",
+      "Processing sample number 17000\n",
+      "Loading samples 18000 through 18999\n",
+      "Processing sample number 18000\n",
+      "Loading samples 19000 through 19999\n",
+      "Processing sample number 19000\n",
+      "Loading samples 20000 through 20999\n",
+      "Processing sample number 20000\n",
+      "Loading samples 21000 through 21999\n",
+      "Processing sample number 21000\n",
+      "Loading samples 22000 through 22721\n",
+      "Processing sample number 22000\n",
+      "Loss for epoch 2: 3806234.4836998074\n",
+      "Loading samples 0 through 999\n",
+      "Processing sample number 0\n",
+      "Loading samples 1000 through 1999\n",
+      "Processing sample number 1000\n",
+      "Loading samples 2000 through 2999\n",
+      "Processing sample number 2000\n",
+      "Loading samples 3000 through 3999\n",
+      "Processing sample number 3000\n",
+      "Loading samples 4000 through 4999\n",
+      "Processing sample number 4000\n",
+      "Loading samples 5000 through 5999\n",
+      "Processing sample number 5000\n",
+      "Loading samples 6000 through 6999\n",
+      "Processing sample number 6000\n",
+      "Loading samples 7000 through 7999\n",
+      "Processing sample number 7000\n",
+      "Loading samples 8000 through 8999\n",
+      "Processing sample number 8000\n",
+      "Loading samples 9000 through 9999\n",
+      "Processing sample number 9000\n",
+      "Loading samples 10000 through 10999\n",
+      "Processing sample number 10000\n",
+      "Loading samples 11000 through 11999\n",
+      "Processing sample number 11000\n",
+      "Loading samples 12000 through 12999\n",
+      "Processing sample number 12000\n",
+      "Loading samples 13000 through 13999\n",
+      "Processing sample number 13000\n",
+      "Loading samples 14000 through 14999\n",
+      "Processing sample number 14000\n",
+      "Loading samples 15000 through 15999\n",
+      "Processing sample number 15000\n",
+      "Loading samples 16000 through 16999\n",
+      "Processing sample number 16000\n",
+      "Loading samples 17000 through 17999\n",
+      "Processing sample number 17000\n",
+      "Loading samples 18000 through 18999\n",
+      "Processing sample number 18000\n",
+      "Loading samples 19000 through 19999\n",
+      "Processing sample number 19000\n",
+      "Loading samples 20000 through 20999\n",
+      "Processing sample number 20000\n",
+      "Loading samples 21000 through 21999\n",
+      "Processing sample number 21000\n",
+      "Loading samples 22000 through 22721\n",
+      "Processing sample number 22000\n",
+      "Loss for epoch 3: 3804729.050560172\n",
+      "Loading samples 0 through 999\n",
+      "Processing sample number 0\n",
+      "Loading samples 1000 through 1999\n",
+      "Processing sample number 1000\n",
+      "Loading samples 2000 through 2999\n",
+      "Processing sample number 2000\n",
+      "Loading samples 3000 through 3999\n",
+      "Processing sample number 3000\n",
+      "Loading samples 4000 through 4999\n",
+      "Processing sample number 4000\n",
+      "Loading samples 5000 through 5999\n",
+      "Processing sample number 5000\n",
+      "Loading samples 6000 through 6999\n",
+      "Processing sample number 6000\n",
+      "Loading samples 7000 through 7999\n",
+      "Processing sample number 7000\n",
+      "Loading samples 8000 through 8999\n",
+      "Processing sample number 8000\n",
+      "Loading samples 9000 through 9999\n",
+      "Processing sample number 9000\n",
+      "Loading samples 10000 through 10999\n",
+      "Processing sample number 10000\n",
+      "Loading samples 11000 through 11999\n",
+      "Processing sample number 11000\n",
+      "Loading samples 12000 through 12999\n",
+      "Processing sample number 12000\n",
+      "Loading samples 13000 through 13999\n",
+      "Processing sample number 13000\n",
+      "Loading samples 14000 through 14999\n",
+      "Processing sample number 14000\n",
+      "Loading samples 15000 through 15999\n",
+      "Processing sample number 15000\n",
+      "Loading samples 16000 through 16999\n",
+      "Processing sample number 16000\n",
+      "Loading samples 17000 through 17999\n",
+      "Processing sample number 17000\n",
+      "Loading samples 18000 through 18999\n",
+      "Processing sample number 18000\n",
+      "Loading samples 19000 through 19999\n",
+      "Processing sample number 19000\n",
+      "Loading samples 20000 through 20999\n",
+      "Processing sample number 20000\n",
+      "Loading samples 21000 through 21999\n",
+      "Processing sample number 21000\n",
+      "Loading samples 22000 through 22721\n",
+      "Processing sample number 22000\n",
+      "Loss for epoch 4: 3804357.5509121967\n",
+      "Loading samples 0 through 999\n",
+      "Processing sample number 0\n",
+      "Loading samples 1000 through 1999\n",
+      "Processing sample number 1000\n",
+      "Loading samples 2000 through 2999\n",
+      "Processing sample number 2000\n",
+      "Loading samples 3000 through 3999\n",
+      "Processing sample number 3000\n",
+      "Loading samples 4000 through 4999\n",
+      "Processing sample number 4000\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Label(value='0.001 MB of 0.001 MB uploaded\\r'), FloatProgress(value=1.0, max=1.0)))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "    table.wandb td:nth-child(1) { padding: 0 10px; text-align: left ; width: auto;} td:nth-child(2) {text-align: left ; width: 100%}\n",
+       "    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; width: 100% }\n",
+       "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
+       "    </style>\n",
+       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>avg_loss_per_batch</td><td>█▃▃▁▁</td></tr><tr><td>avg_loss_per_batch_test</td><td>▁</td></tr><tr><td>batch loss</td><td>▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁█▁▁▂▁▁▁▁▁▁▁▁</td></tr><tr><td>cumulative_loss</td><td>█▃▃▁▁</td></tr><tr><td>r2</td><td>▁</td></tr><tr><td>testing_loss</td><td>▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>avg_loss_per_batch</td><td>669.66336</td></tr><tr><td>avg_loss_per_batch_test</td><td>204.51641</td></tr><tr><td>batch loss</td><td>31.38285</td></tr><tr><td>cumulative_loss</td><td>3804357.55091</td></tr><tr><td>r2</td><td>-0.05711</td></tr><tr><td>testing_loss</td><td>255645.50903</td></tr></table><br/></div></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run <strong style=\"color:#cdcd00\">exalted-sweep-1</strong> at: <a href='https://wandb.ai/changli_824/CNN_sweep_scalar/runs/zp04aijl' target=\"_blank\">https://wandb.ai/changli_824/CNN_sweep_scalar/runs/zp04aijl</a><br/>Synced 6 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Find logs at: <code>.\\wandb\\run-20240124_041529-zp04aijl\\logs</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Sweep Agent: Waiting for job.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Sweep Agent: Exiting.\n"
      ]
     }
    ],
