file management, use config file for data paths

--- a/U-Net/CNN scalar custom loading.ipynb
+++ b/U-Net/CNN scalar custom loading.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6061aa55-251b-4364-b330-988f655c4917",
    "metadata": {
     "id": "6061aa55-251b-4364-b330-988f655c4917",
@@ -113,15 +113,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "f8e2ce47-f930-4911-9852-d4aeeeac9e03",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "input_folder_path = '../AdditiveParts/data/parts_0, files 1 through 3950/Binvox_files_default_res/'\n",
-    "label_file_path = '../AdditiveParts/data/Tweaker Orientation Score/Tweaker Orientation Score/parts0_1-3950.csv'"
+    "import json\n",
+    "paths = json.load(open('config.json', 'r'))\n",
+    "input_folder_path = paths['input_folder_path']\n",
+    "label_file_path = paths['label_file_path']"
    ]
   },
   {
@@ -1048,7 +1050,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
