--- a/U-Net/CNN scalar custom loading.ipynb
+++ b/U-Net/CNN scalar custom loading.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6061aa55-251b-4364-b330-988f655c4917",
    "metadata": {
     "id": "6061aa55-251b-4364-b330-988f655c4917",
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "f8e2ce47-f930-4911-9852-d4aeeeac9e03",
    "metadata": {
     "tags": []
@@ -136,7 +136,7 @@
    "outputs": [],
    "source": [
     "dataset = CustomDataset(input_folder_path = input_folder_path, label_file_path = label_file_path, transform = transform, max_count = None, ram_limit = 1000)\n",
-    "dataset_limited = CustomDataset(input_folder_path = input_folder_path, label_file_path = label_file_path, transform = transform, max_count = 1000, ram_limit = 1000)"
+    "dataset_limited = CustomDataset(input_folder_path = input_folder_path, label_file_path = label_file_path, transform = transform, max_count = 5000, ram_limit = 1000)"
    ]
   },
   {
@@ -281,6 +281,9 @@
     "\n",
     "        self.max_pooling_2 = nn.MaxPool3d(kernel_size = 2)\n",
     "        self.max_pooling_1 = nn.MaxPool3d(kernel_size = 1)\n",
+    "        self.max_pooling_8 = nn.MaxPool3d(kernel_size = 8)\n",
+    "        self.linear_1 = nn.Linear(256, 16)\n",
+    "        self.linear_2 = nn.Linear(16, 1)\n",
     "\n",
     "        self.conv256_1_2 = nn.Sequential(\n",
     "            nn.Conv3d(in_channels = 1, out_channels = 2, kernel_size = kernel_size, padding = 'same'),\n",
@@ -303,6 +306,12 @@
     "        self.conv128_4_4 = nn.Sequential(\n",
     "            nn.Conv3d(in_channels = 4, out_channels = 4, kernel_size = kernel_size, padding = 'same'),\n",
     "            nn.BatchNorm3d(num_features = 4),\n",
+    "            activation_fn\n",
+    "        )\n",
+    "\n",
+    "        self.conv64_1_8 = nn.Sequential(\n",
+    "            nn.Conv3d(in_channels = 1, out_channels = 8, kernel_size = kernel_size, padding = 'same'),\n",
+    "            nn.BatchNorm3d(num_features = 8),\n",
     "            activation_fn\n",
     "        )\n",
     "\n",
@@ -390,12 +399,10 @@
     "        x = self.max_pooling_2(x)\n",
     "        x = self.conv8_128_256(x)\n",
     "        x = self.conv8_256_256(x)\n",
-    "        x = self.max_pooling_2(x)\n",
-    "        x = self.conv4_256_32(x)\n",
-    "        x = self.conv4_32_32(x)\n",
-    "        x = self.max_pooling_2(x)\n",
-    "        x = self.conv2_32_1(x)\n",
-    "        x = self.max_pooling_2(x)\n",
+    "        x = self.max_pooling_8(x)\n",
+    "        x = torch.squeeze(x)\n",
+    "        x = self.linear_1(x)\n",
+    "        x = self.linear_2(x)\n",
     "        # print('outcome shape', torch.squeeze(x).shape)\n",
     "        # return torch.reshape(x, (x.shape[0], 1))\n",
     "        return torch.squeeze(x)"
@@ -621,8 +628,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Create sweep with ID: egzuhjv7\n",
-      "Sweep URL: https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/egzuhjv7\n"
+      "Create sweep with ID: r3fuqrh4\n",
+      "Sweep URL: https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/r3fuqrh4\n"
      ]
     }
    ],
@@ -653,7 +660,7 @@
     {
      "data": {
       "text/html": [
-       "Run data is saved locally in <code>C:\\Users\\silly bb\\Desktop\\Capstone\\CNN\\wandb\\run-20240125_203007-xnlffdn6</code>"
+       "Run data is saved locally in <code>C:\\Users\\silly bb\\Desktop\\Capstone\\CNN\\U-Net\\wandb\\run-20240129_215325-9mhetjbd</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -665,7 +672,7 @@
     {
      "data": {
       "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/changli_824/CNN_sweep_scalar/runs/xnlffdn6' target=\"_blank\">treasured-sweep-1</a></strong> to <a href='https://wandb.ai/changli_824/CNN_sweep_scalar' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>Sweep page: <a href='https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/egzuhjv7' target=\"_blank\">https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/egzuhjv7</a>"
+       "Syncing run <strong><a href='https://wandb.ai/changli_824/CNN_sweep_scalar/runs/9mhetjbd' target=\"_blank\">magic-sweep-1</a></strong> to <a href='https://wandb.ai/changli_824/CNN_sweep_scalar' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>Sweep page: <a href='https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/r3fuqrh4' target=\"_blank\">https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/r3fuqrh4</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -689,7 +696,7 @@
     {
      "data": {
       "text/html": [
-       " View sweep at <a href='https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/egzuhjv7' target=\"_blank\">https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/egzuhjv7</a>"
+       " View sweep at <a href='https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/r3fuqrh4' target=\"_blank\">https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/r3fuqrh4</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -701,7 +708,7 @@
     {
      "data": {
       "text/html": [
-       " View run at <a href='https://wandb.ai/changli_824/CNN_sweep_scalar/runs/xnlffdn6' target=\"_blank\">https://wandb.ai/changli_824/CNN_sweep_scalar/runs/xnlffdn6</a>"
+       " View run at <a href='https://wandb.ai/changli_824/CNN_sweep_scalar/runs/9mhetjbd' target=\"_blank\">https://wandb.ai/changli_824/CNN_sweep_scalar/runs/9mhetjbd</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -761,7 +768,7 @@
       "Processing sample number 21000\n",
       "Loading samples 22000 through 22721\n",
       "Processing sample number 22000\n",
-      "Loss for epoch 0: 22063.91174594313\n",
+      "Loss for epoch 0: 22590.6947658509\n",
       "Loading samples 0 through 999\n",
       "Processing sample number 0\n",
       "Loading samples 1000 through 1999\n",
@@ -808,7 +815,7 @@
       "Processing sample number 21000\n",
       "Loading samples 22000 through 22721\n",
       "Processing sample number 22000\n",
-      "Loss for epoch 1: 21329.868923053145\n",
+      "Loss for epoch 1: 21748.359036508948\n",
       "Loading samples 0 through 999\n",
       "Processing sample number 0\n",
       "Loading samples 1000 through 1999\n",
@@ -855,7 +862,7 @@
       "Processing sample number 21000\n",
       "Loading samples 22000 through 22721\n",
       "Processing sample number 22000\n",
-      "Loss for epoch 2: 21119.5975340344\n",
+      "Loss for epoch 2: 21520.175000626594\n",
       "Loading samples 0 through 999\n",
       "Processing sample number 0\n",
       "Loading samples 1000 through 1999\n",
@@ -902,7 +909,7 @@
       "Processing sample number 21000\n",
       "Loading samples 22000 through 22721\n",
       "Processing sample number 22000\n",
-      "Loss for epoch 3: 20996.738049106672\n",
+      "Loss for epoch 3: 21362.87190836668\n",
       "Loading samples 0 through 999\n",
       "Processing sample number 0\n",
       "Loading samples 1000 through 1999\n",
@@ -949,9 +956,17 @@
       "Processing sample number 21000\n",
       "Loading samples 22000 through 22721\n",
       "Processing sample number 22000\n",
-      "Loss for epoch 4: 20900.31127411872\n",
+      "Loss for epoch 4: 21245.20132933557\n",
       "Loading samples 0 through 999\n",
-      "Processing sample number 0\n"
+      "Processing sample number 0\n",
+      "Loading samples 1000 through 1999\n",
+      "Processing sample number 1000\n",
+      "Loading samples 2000 through 2999\n",
+      "Processing sample number 2000\n",
+      "Loading samples 3000 through 3999\n",
+      "Processing sample number 3000\n",
+      "Loading samples 4000 through 4999\n",
+      "Processing sample number 4000\n"
      ]
     },
     {
@@ -976,7 +991,7 @@
        "    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; width: 100% }\n",
        "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
        "    </style>\n",
-       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>avg_loss_per_batch</td><td>█▄▂▂▁</td></tr><tr><td>avg_loss_per_batch_test</td><td>▁</td></tr><tr><td>batch loss</td><td>▁▁▂▁▁▁▁▁▂▁▁▃▁▂▁▁▁▁▁▁▁▁▁▁▁▁▁▁█▁▂▁▁▁▁▁▂▁▁▁</td></tr><tr><td>cumulative_loss</td><td>█▄▂▂▁</td></tr><tr><td>r2</td><td>▁</td></tr><tr><td>testing_loss</td><td>▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>avg_loss_per_batch</td><td>3.67898</td></tr><tr><td>avg_loss_per_batch_test</td><td>2.67817</td></tr><tr><td>batch loss</td><td>0.0618</td></tr><tr><td>cumulative_loss</td><td>20900.31127</td></tr><tr><td>r2</td><td>-0.01076</td></tr><tr><td>testing_loss</td><td>669.54322</td></tr></table><br/></div></div>"
+       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>avg_loss_per_batch</td><td>█▄▂▂▁</td></tr><tr><td>avg_loss_per_batch_test</td><td>▁</td></tr><tr><td>batch loss</td><td>▁▁▂▁▁▁▁▁▂▁▁▃▁▂▁▁▁▁▁▁▁▁▁▁▁▁▁▁█▁▂▁▁▁▁▁▂▁▁▁</td></tr><tr><td>cumulative_loss</td><td>█▄▂▂▁</td></tr><tr><td>r2</td><td>▁</td></tr><tr><td>testing_loss</td><td>▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>avg_loss_per_batch</td><td>3.73969</td></tr><tr><td>avg_loss_per_batch_test</td><td>3.12511</td></tr><tr><td>batch loss</td><td>0.26943</td></tr><tr><td>cumulative_loss</td><td>21245.20133</td></tr><tr><td>r2</td><td>-0.02955</td></tr><tr><td>testing_loss</td><td>3906.39121</td></tr></table><br/></div></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -988,7 +1003,7 @@
     {
      "data": {
       "text/html": [
-       " View run <strong style=\"color:#cdcd00\">treasured-sweep-1</strong> at: <a href='https://wandb.ai/changli_824/CNN_sweep_scalar/runs/xnlffdn6' target=\"_blank\">https://wandb.ai/changli_824/CNN_sweep_scalar/runs/xnlffdn6</a><br/>Synced 6 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
+       " View run <strong style=\"color:#cdcd00\">magic-sweep-1</strong> at: <a href='https://wandb.ai/changli_824/CNN_sweep_scalar/runs/9mhetjbd' target=\"_blank\">https://wandb.ai/changli_824/CNN_sweep_scalar/runs/9mhetjbd</a><br/>Synced 6 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -1000,7 +1015,7 @@
     {
      "data": {
       "text/html": [
-       "Find logs at: <code>.\\wandb\\run-20240125_203007-xnlffdn6\\logs</code>"
+       "Find logs at: <code>.\\wandb\\run-20240129_215325-9mhetjbd\\logs</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -1050,7 +1065,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
