Reverting to 256 resolution

--- a/U-Net/CNN scalar custom loading.ipynb
+++ b/U-Net/CNN scalar custom loading.ipynb
@@ -49,7 +49,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cpu\n"
+      "cuda:0\n"
      ]
     }
    ],
@@ -134,7 +134,8 @@
    "outputs": [],
    "source": [
     "def transform(voxel):\n",
-    "    return torch.unsqueeze(torch.tensor(condense_voxel_array(voxel, 64), dtype = torch.float32), 0)"
+    "    # return torch.unsqueeze(torch.tensor(condense_voxel_array(voxel, 64), dtype = torch.float32), 0)\n",
+    "    return torch.unsqueeze(torch.tensor(voxel, dtype = torch.float32), 0)"
    ]
   },
   {
@@ -162,8 +163,8 @@
    "outputs": [],
    "source": [
     "# Small values of max_count is for debugging and testing. Use max_count = None for full runs for training data.\n",
-    "dataset = CustomDataset(input_folder_path = input_folder_path, label_file_path = label_file_path, transform = transform, max_count = 100, ram_limit = 1000)\n",
-    "dataset_limited = CustomDataset(input_folder_path = input_folder_path, label_file_path = label_file_path, transform = transform, max_count = 100, ram_limit = 1000)"
+    "dataset = CustomDataset(input_folder_path = input_folder_path, label_file_path = label_file_path, transform = transform, max_count = None, ram_limit = 1000)\n",
+    "dataset_limited = CustomDataset(input_folder_path = input_folder_path, label_file_path = label_file_path, transform = transform, max_count = 5000, ram_limit = 1000)"
    ]
   },
   {
@@ -410,7 +411,7 @@
     "\n",
     "    def forward(self, x):\n",
     "        # Code for original (not downsampled) voxels\n",
-    "        '''\n",
+    "        \n",
     "        x = self.conv256_1_2(x)\n",
     "        x = self.conv256_2_2(x)\n",
     "        x = self.max_pooling_2(x)\n",
@@ -418,10 +419,12 @@
     "        x = self.conv128_4_4(x)\n",
     "        x = self.max_pooling_2(x)\n",
     "        x = self.conv64_4_8(x)\n",
-    "        '''\n",
+    "        \n",
     "        \n",
     "        # Code for downsampled voxels\n",
+    "        '''\n",
     "        x = self.conv64_1_8(x)\n",
+    "        '''\n",
     "        \n",
     "        x = self.conv64_8_8(x)\n",
     "        x = self.max_pooling_2(x)\n",
@@ -662,8 +665,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Create sweep with ID: d46dh2ik\n",
-      "Sweep URL: https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/d46dh2ik\n"
+      "Create sweep with ID: k2wdd06b\n",
+      "Sweep URL: https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/k2wdd06b\n"
      ]
     }
    ],
@@ -673,107 +676,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "fec8f8da-e378-4181-8bcc-fc83a0a26754",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "Tracking run with wandb version 0.16.2"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Run data is saved locally in <code>/Users/lichang/CNN/U-Net/wandb/run-20240131_200010-kua1mg0e</code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/changli_824/CNN_sweep_scalar/runs/kua1mg0e' target=\"_blank\">smart-sweep-1</a></strong> to <a href='https://wandb.ai/changli_824/CNN_sweep_scalar' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>Sweep page: <a href='https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/d46dh2ik' target=\"_blank\">https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/d46dh2ik</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View project at <a href='https://wandb.ai/changli_824/CNN_sweep_scalar' target=\"_blank\">https://wandb.ai/changli_824/CNN_sweep_scalar</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View sweep at <a href='https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/d46dh2ik' target=\"_blank\">https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/d46dh2ik</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View run at <a href='https://wandb.ai/changli_824/CNN_sweep_scalar/runs/kua1mg0e' target=\"_blank\">https://wandb.ai/changli_824/CNN_sweep_scalar/runs/kua1mg0e</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "config: {'activation_fn': 'ReLU', 'batch_size': 4, 'epochs_choice': 5, 'kernel_size': 3, 'learning_rate': 0.001}\n",
-      "Loading samples 0 through 99\n",
-      "Processing sample number 0\n",
-      "Loss for epoch 0: 99.04839342832565\n",
-      "Loading samples 0 through 99\n",
-      "Processing sample number 0\n",
-      "Loss for epoch 1: 97.96058732271194\n",
-      "Loading samples 0 through 99\n",
-      "Processing sample number 0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Ctrl + C detected. Stopping sweep.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "wandb.agent(sweep_id = sweep_id, function = evaluate)"
    ]
@@ -806,7 +714,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
