Update using new labels

--- a/U-Net/CNN scalar custom loading.ipynb
+++ b/U-Net/CNN scalar custom loading.ipynb
@@ -148,9 +148,10 @@
    "outputs": [],
    "source": [
     "import json\n",
-    "paths = json.load(open('config.json', 'r'))\n",
-    "input_folder_path = paths['input_folder_path']\n",
-    "label_file_path = paths['label_file_path']"
+    "configs = json.load(open('config.json', 'r'))\n",
+    "input_folder_path = configs['input_folder_path']\n",
+    "label_file_path = configs['label_file_path']\n",
+    "label_type = configs['label_type']"
    ]
   },
   {
@@ -163,8 +164,29 @@
    "outputs": [],
    "source": [
     "# Small values of max_count is for debugging and testing. Use max_count = None for full runs for training data.\n",
-    "dataset = CustomDataset(input_folder_path = input_folder_path, label_file_path = label_file_path, transform = transform, max_count = None, ram_limit = 1000)\n",
-    "dataset_limited = CustomDataset(input_folder_path = input_folder_path, label_file_path = label_file_path, transform = transform, max_count = 5000, ram_limit = 1000)"
+    "dataset = CustomDataset(input_folder_path = input_folder_path, label_file_path = label_file_path, transform = transform, max_count = 1000, ram_limit = 1000, label_type = label_type)\n",
+    "dataset_limited = CustomDataset(input_folder_path = input_folder_path, label_file_path = label_file_path, transform = transform, max_count = 1000, ram_limit = 1000, label_type = label_type)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f9de22b3-9c5b-42c3-8f34-94abec2fd793",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1000"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(dataset)"
    ]
   },
   {
@@ -177,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "8d2623ad-319a-4cb5-89cf-f279814a831e",
    "metadata": {
     "id": "8d2623ad-319a-4cb5-89cf-f279814a831e",
@@ -296,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "f9d0082e-99dc-49ac-aa28-b190cfc76d48",
    "metadata": {
     "tags": []
@@ -455,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "676a283b-9009-4ac8-8fd3-c1ef8b65c4b2",
    "metadata": {
     "tags": []
@@ -492,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "af6093e9-59db-4985-91a0-cf5d2bb9b3e7",
    "metadata": {
     "id": "af6093e9-59db-4985-91a0-cf5d2bb9b3e7",
@@ -535,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "a77c5334-2ce1-49ea-8785-c499da625081",
    "metadata": {
     "tags": []
@@ -567,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "f45e5a4d-fe1f-4629-a456-1865f7e9906b",
    "metadata": {
     "tags": []
@@ -591,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "2403886e-355f-4658-8199-aebb835516bd",
    "metadata": {
     "tags": []
@@ -620,10 +642,10 @@
     "        'values': [1e-4, 1e-3, 1e-2]\n",
     "    },\n",
     "    'batch_size': {\n",
-    "        'values': [8, 4]\n",
+    "        'values': [4]\n",
     "    },\n",
     "}\n",
-    "\n",
+    "'''\n",
     "parameters_dict = {\n",
     "    'kernel_size': {\n",
     "        'values': [3]\n",
@@ -641,7 +663,7 @@
     "        'values': [4]\n",
     "    },\n",
     "}\n",
-    "\n",
+    "'''\n",
     "sweep_config['parameters'] = parameters_dict"
    ]
   },
@@ -655,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "74f5fe4f-57a0-4445-aaec-58183fb12613",
    "metadata": {
     "tags": []
@@ -665,8 +687,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Create sweep with ID: k2wdd06b\n",
-      "Sweep URL: https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/k2wdd06b\n"
+      "Create sweep with ID: 2mk6ag2u\n",
+      "Sweep URL: https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/2mk6ag2u\n"
      ]
     }
    ],
@@ -681,7 +703,98 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "Tracking run with wandb version 0.16.3"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Run data is saved locally in <code>C:\\Users\\silly bb\\Desktop\\Capstone\\CNN\\U-Net\\wandb\\run-20240225_211359-wbnfls7c</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Syncing run <strong><a href='https://wandb.ai/changli_824/CNN_sweep_scalar/runs/wbnfls7c' target=\"_blank\">deft-sweep-17</a></strong> to <a href='https://wandb.ai/changli_824/CNN_sweep_scalar' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>Sweep page: <a href='https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/2mk6ag2u' target=\"_blank\">https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/2mk6ag2u</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View project at <a href='https://wandb.ai/changli_824/CNN_sweep_scalar' target=\"_blank\">https://wandb.ai/changli_824/CNN_sweep_scalar</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View sweep at <a href='https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/2mk6ag2u' target=\"_blank\">https://wandb.ai/changli_824/CNN_sweep_scalar/sweeps/2mk6ag2u</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run at <a href='https://wandb.ai/changli_824/CNN_sweep_scalar/runs/wbnfls7c' target=\"_blank\">https://wandb.ai/changli_824/CNN_sweep_scalar/runs/wbnfls7c</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "config: {'activation_fn': 'ReLU', 'batch_size': 4, 'epochs_choice': 10, 'kernel_size': 5, 'learning_rate': 0.001}\n",
+      "Loading samples 0 through 999\n",
+      "Processing sample number 0\n",
+      "Loss for epoch 0: 7742.84782178306\n",
+      "Loading samples 0 through 999\n",
+      "Processing sample number 0\n",
+      "Loss for epoch 1: 6814.7386316357915\n",
+      "Loading samples 0 through 999\n",
+      "Processing sample number 0\n",
+      "Loss for epoch 2: 6619.387806232493\n",
+      "Loading samples 0 through 999\n",
+      "Processing sample number 0\n"
+     ]
+    }
+   ],
    "source": [
     "wandb.agent(sweep_id = sweep_id, function = evaluate)"
    ]
