--- a/U-Net/CNN scalar custom loading.ipynb
+++ b/U-Net/CNN scalar custom loading.ipynb
@@ -387,7 +387,7 @@
    "outputs": [],
    "source": [
     "def evaluate(config = None):\n",
-    "    loss_fn = nn.L1Loss()\n",
+    "    loss_fn = nn.MSELoss()\n",
     "    model = train(config, loss_fn)\n",
     "    avg_loss_per_batch_test, testing_loss, r2 = test(config, model, loss_fn)\n",
     "    wandb.log({'avg_loss_per_batch_test': avg_loss_per_batch_test, 'testing_loss': testing_loss, 'r2': r2})"
