Prepare for savio
reverting to 5 epochs, change project name, change to MSELoss, adding logging for dataset class

--- a/U-Net/Savio 3D CNN.ipynb
+++ b/U-Net/Savio 3D CNN.ipynb
@@ -175,7 +175,7 @@
    "source": [
     "def train(config, loss_fn):\n",
     "    # initialize a wandb run\n",
-    "    wandb.init(config = config, project = 'PAPER', name = '3D CNN Testing')\n",
+    "    wandb.init(config = config, name = '3D CNN Testing')\n",
     "\n",
     "    # copy the config\n",
     "    config = wandb.config\n",
@@ -246,7 +246,7 @@
    "outputs": [],
    "source": [
     "def evaluate(config = None):\n",
-    "    loss_fn = nn.L1Loss()\n",
+    "    loss_fn = nn.MSELoss()\n",
     "    model = train(config, loss_fn)\n",
     "    avg_loss_per_batch_test, testing_loss, r2 = test(config, model, loss_fn)\n",
     "    wandb.log({'avg_loss_per_batch_test': avg_loss_per_batch_test, 'testing_loss': testing_loss, 'r2': r2})"
@@ -303,7 +303,7 @@
     "        'values': ['ReLU']\n",
     "    },\n",
     "    'epochs_choice': {\n",
-    "          'values': [20]\n",
+    "          'values': [5]\n",
     "    },\n",
     "    'learning_rate': {\n",
     "        'values': [1e-4]\n",
@@ -333,7 +333,7 @@
    },
    "outputs": [],
    "source": [
-    "sweep_id = wandb.sweep(sweep_config, project = 'CNN_sweep_scalar')"
+    "sweep_id = wandb.sweep(sweep_config, project = 'PAPER')"
    ]
   },
   {
